[gd_scene load_steps=6 format=3 uid="uid://chos4k3yjaulj"]

[ext_resource type="Script" uid="uid://mrsr835dwq86" path="res://scripts/main_menu.gd" id="1_jk1qb"]
[ext_resource type="Texture2D" uid="uid://bqln4sg40tqc7" path="res://assets/tiles/Mountain_Falls_Files/Backgrounds LUSH/Mountain_Falls_Background_LUSH.png" id="5_rcqid"]
[ext_resource type="Texture2D" uid="uid://babxewjbdvy77" path="res://assets/buttons/start_button.png" id="10_5dd4i"]
[ext_resource type="FontFile" uid="uid://dfnsphvw8qxps" path="res://assets/Font/PixelOperator8-Bold.ttf" id="11_lgwnu"]

[sub_resource type="LabelSettings" id="LabelSettings_flqon"]
font = ExtResource("11_lgwnu")
font_size = 128
outline_size = 50
outline_color = Color(0.4584, 0.191908, 0.13014, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_jk1qb")

[node name="MountainFallsBackgroundLush" type="Sprite2D" parent="."]
position = Vector2(575.5, 320)
scale = Vector2(3.59687, 3.08654)
texture = ExtResource("5_rcqid")

[node name="Play_Button" type="TextureButton" parent="."]
offset_left = 240.0
offset_top = 71.0
offset_right = 880.0
offset_bottom = 711.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(319, 319)
texture_normal = ExtResource("10_5dd4i")

[node name="Label" type="Label" parent="."]
offset_left = 107.0
offset_top = 57.0
offset_right = 1067.0
offset_bottom = 185.0
text = "RAY BULL"
label_settings = SubResource("LabelSettings_flqon")

[connection signal="mouse_entered" from="Play_Button" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="Play_Button" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="Play_Button" to="." method="_on_texture_button_pressed"]
